# android-trust-lab

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: ci.yml  docs.yml
analyzer/: README.md  cli.py  pyproject.toml
analyzer/trustlab/: __init__.py  cli.py  diff.py  normalizer.py  parser.py  report_writer.py  trust_dimensions.py  validators.py
collector/: README.md
collector/android/: app_probe_design.md  privileged_probe_design.md
collector/host/: collect_adb_snapshot.md  collect_host_snapshot.md  pull_reports.md
collector/normalization/: mount_normalization.md  property_normalization.md  selinux_normalization.md
datasets/: README.md  manifest.json
docs/: duckdetector_comparison.md  emulator_limitations.md  evidence_matrix.md  experiment_methodology.md  glossary.md  magisk_collector_design.md  overview.md  paper.md  reviewer_packet.md  reviewer_quickstart.md  threat_model.md  trust_model.md  verified_boot_notes.md  work_manifest.md
experiments/: E01_stock_avd.md  E02_rooted_avd.md  E03_writable_system_avd.md  E04_modified_props.md  E05_magisk_collector.md  E99_physical_device_template.md  README.md
module/trustlab-magisk/: README.md  (+5 more)
results/: README.md  artifact_manifest.json  summary_table.md  trust_state_diffs.md
scripts/: verify_release.sh
tests/: test_diff.py  test_normalizer.py  test_package_magisk_module.py  test_parser.py  test_schema_validation.py
tools/: generate_report.md  generate_report.py  package_magisk_module.md  package_magisk_module.py  run_experiment.md  setup_avd.md  validate_dataset.md
(+30 files in other folders)
