[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "android-trust-lab-analyzer"
version = "0.1.0"
description = "Analyzer for Android Trust Lab trust-state reports"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Aleksander Vlasov"}]
license = {text = "Apache-2.0"}
dependencies = ["jsonschema>=4.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
rich = ["rich>=13.0"]

[project.scripts]
trustlab = "trustlab.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["trustlab*"]
